--- a/build.gradle
+++ b/build.gradle
@@ -1,67 +1,5 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application'
-    id 'com.google.gms.google-services'
-}
-
-android {
-    namespace 'com.example.GroupAssignment2'
-    compileSdk 34
-
-    defaultConfig {
-        applicationId 'com.example.GroupAssignment2'
-        minSdk 26
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
-
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    buildFeatures{
-        viewBinding true
-    }
-}
-
-dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    // Firebase BOM (Bill of Materials)
-    implementation platform('com.google.firebase:firebase-bom:32.4.0')
-
-    // Firebase components
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
-    implementation 'com.google.firebase:firebase-database'
-
-    // Google Play Services
-    implementation 'com.google.android.gms:play-services-base:18.2.0'
-
-    // Retrofit for API calls
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-    // Image loading
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-
-// Testing
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
+id 'com.android.application' version '8.2.0' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
